--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
-        mkdir build
-        cd build
-        cmake ..
-        make
+        ./scripts/build.sh
