--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install boost and z3
-      run: sudo apt install -y libboost-all-dev z3
+      run: sudo apt install -y libboost-all-dev z3=2.4.29-1
     - name: Build Solidity
       run: ./scripts/build.sh
