--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install boost and z3
-      run: sudo apt install -y libboost-all-dev z3=4.12.1
+      run: |
+        apt-cache policy z3
+        sudo apt install -y libboost-all-dev z3=4.12.1
     - name: Build Solidity
       run: ./scripts/build.sh
